--- a/sources/main.tex
+++ b/sources/main.tex
@@ -39,30 +39,47 @@
 \section{Вопрос №1. Образование древнерусского государства}
 
 \begin{bclogo}[logo=\bcinfo, couleurBarre=orange, noborder=true, couleur=white]{Информация о материале}
-    Источник справочного материала по данной теме: Киевская Русь // Википедия. [2023]. Дата обновления: 01.06.2023. URL: \url{https://ru.wikipedia.org/?curid=27&oldid=130794937} (дата обращения: 01.06.2023). 
+    Источник справочного материала по данной теме: Киевская Русь // Википедия. [2023]. Дата обновления: 01.06.2023. URL: \url{https://ru.wikipedia.org/?curid=27&oldid=130794937} (дата обращения: 01.06.2023).
+
+    Источник информации о причинах: Образование древнерусского государства — кратко причины и даты. — Текст : электронный // Образовака : [сайт]. — URL: \href{https://obrazovaka.ru/istoriya/obrazovanie-drevnerusskogo-gosudarstva-kratko-prichiny-i-daty.html}{https://obrazovaka.ru/istoriya/obrazovanie-drevnerusskogo-gosudarstva-kratko-prichiny-i-daty.html} (дата обращения: 30.06.2023).
 \end{bclogo}
 
 Древнерусское государство \textbf{возникло на торговом пути «из варяг в греки» на землях восточнославянских племён} — ильменских словен, кривичей, полян и \textbf{финно-угорских племён} — чуди, мери и веси, затем охватив земли других восточнославянских племён — древлян, дреговичей, полочан, радимичей, северян и вятичей.
 
-\hfill 
+\subsection{Причины}
 
-\textbf{Первое надёжно датируемое известие о руси и государстве русов относится к первой трети IX века}: в \textbf{Бертинских анналах под 839 годом} упомянуты послы кагана народа рос, прибывшие сначала в Константинополь, а оттуда ко двору франкского императора Людовика Благочестивого. Император расследовал цель их прибытия и выяснил, что они из народа свеев (шведов, то есть скандинавов).
+\begin{enumerate}
+    \item \textbf{Объединение славянских племен для противостояния более могущественным соседям}: В начале IX  века славянские племена были окружены более сильными государствами. На юге раскинулось большое государство – Хазарский каганат, дань которому были вынуждены платить северяне, поляне и вятичи. На севере –  выносливые и воинственные норманны требовали откупа от кривичей, ильменских словене, чуди и меря. Только объединение племен могло изменить существующую несправедливость
+    \item \textbf{Разрушение родового строя и родовых связей}: Военные походы, освоение новых земель и торговля привели к тому, что в родовых общинах, основанных на имущественном равенстве и ведении хозяйства сообща, появляются более сильные и богатые семьи – родовая знать
+    \item \textbf{Общественное расслоение}: Разрушение родового и общинного строя у славян привело к появлению новых слоёв населения. Так образовался слой родовой знати и дружинников. К первым относились потомки старейшин, которые сумели нажить больше богатства. Ко вторым, дружинникам – молодые воины, которые после военных походов не возвращались к земледелию, а становились профессиональными воинами, защищавшими правителей и общину. Слой простых общинников в знак благодарности за защиту воинам и князьям преподносили дары, которые в дальнейшем превратились в обязательную дань. Кроме того, выделился и слой ремесленников, которые отошли от земледелия и обменивали свои «плоды» труда на продукты. Появились и люди, живущие исключительно за счёт торговли – слой купцов
+    \item \textbf{Развитие городов}: В IX веке большую роль в развитии общества играли торговые пути (сухопутные и речные). Все новые слои населения – знать, дружинники, ремесленники, купцы и земледельцы стремились селиться в поселках, стоящих на торговых путях. Таким образом, количество жителей увеличивалось, менялся общественный строй, появлялись новые порядки: власть князей превращалась во власть государственную, дань – в обязательный государственный налог, небольшие города – в крупные центры.
+\end{enumerate}
+
+\subsection{Хронология}
+
+\textbf{Первое надёжно датируемое известие о руси и государстве русов относится к первой трети IX века}: в \textbf{Бертинских анналах под 839 годом} упомянуты послы кагана народа рос, прибывшие сначала в Константинополь, а оттуда ко двору франкского императора Людовика Благочестивого. Император расследовал цель их прибытия и выяснил, что они из народа \textbf{свеев} (шведов, то есть скандинавов).
 
 В «Повести временных лет» под 859 годом сказано, что финно-угорские и северная часть восточнославянских племён находились в даннической зависимости от варягов, а юго-восточная часть восточнославянских племён — от хазар.
 
 \hfill
 
-\textbf{В 860 году} («Повесть временных лет» ошибочно относит его к 866 году) \textbf{русь совершает первый поход на Константинополь}. Греческие источники связывают с ним так называемое первое крещение Руси, после которого на Руси, возможно, возникла епархия и правящая верхушка (возможно, во главе с Аскольдом) приняла христианство.
-
-Если следовать «Повести временных лет», Государству Рюрика предшествовала конфедерация славянских и финно-угорских племён, изгнавшая, а затем призвавшая варягов.
+\textbf{В 860 году} («Повесть временных лет» ошибочно относит его к 866 году) \textbf{русь совершает первый поход на Константинополь}. Греческие источники связывают с ним так называемое \textbf{первое крещение Руси}, после которого на Руси, возможно, возникла епархия и правящая верхушка (возможно, во главе с Аскольдом) приняла христианство.
 
 \hfill
 
 \textbf{В 862 году}, согласно «Повести временных лет» (дата приблизительна, поскольку древнейшая хронология летописи представляет собой результат искусственных калькуляций и исторически малодостоверна), \textbf{славянские и финно-угорские племена, прежде изгнавшие варягов, призвали их на княжение}.
 
-\textbf{В том же 862 году} (дата также приблизительна) \textbf{варяги и дружинники Рюрика Аскольд и Дир, направлявшиеся в Константинополь, подчинили себе Киев, тем самым установив полный контроль над важнейшим торговым путём «из варяг в греки»}. При этом Новгородская и Никоновская летописи не связывают Аскольда и Дира с Рюриком, а хроника Яна Длугоша и Густынская летопись называют их потомками Кия.
+\textbf{В том же 862 году} (дата также приблизительна) \textbf{варяги и дружинники Рюрика Аскольд и Дир, направлявшиеся в Константинополь, подчинили себе Киев, тем самым установив полный контроль над важнейшим торговым путём «из варяг в греки»}.
+
+\hfill
 
 \textbf{В 879 году в Новгороде умер Рюрик. Княжение было передано Олегу, регенту при малолетнем сыне Рюрика Игоре}. 
+
+\hfill
+
+В \textbf{882 году}, по летописной хронологии, \textbf{князь Олег} (Олег Вещий) отправился в \textbf{поход из Новгорода на юг}, по пути захватив \textbf{Смоленск} и \textbf{Любеч}. Далее Олег с \textbf{новгородским войском и наёмной варяжской дружиной} захватил \textbf{Киев}, убил правивших там Аскольда и Дира и \textbf{объявил Киев столицей своего государства}.
+
+Олег военным путём распространил свою власть на земли \textbf{древлян} и \textbf{северян}, а \textbf{радимичи} приняли условия Олега (выплату дани) без борьбы
 
 \pagebreak
 \section{Вопрос №2. Социальный и экономический строй Киевской Руси}
