[05-07-2023] Upload TeX sources

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -134,23 +134,82 @@
 \subsection{Экономический строй Киевской Руси}
 
 \begin{bclogo}[logo=\bcinfo, couleurBarre=orange, noborder=true, couleur=white]{Информация о материале}
-    Источник справочного материала по данной теме: репозиторий \href{https://github.com/BFI-2202/history_notes}{BFI-2202/history\_notes}, автор репозитория — \textbf{Лисид Лаконский}
+    Источник справочного материала по данной теме:
+
+    История экономики России // Википедия. [2023]. Дата обновления: 15.05.2023. URL: \url{https://ru.wikipedia.org/?curid=2972556} (дата обращения: 15.05.2023).
+
+    Экономика Киевской Руси // Образовательный портал «Справочник». — Дата последнего обновления статьи: 26.04.2023. — URL: \url{https://spravochnick.ru/istoriya_rossii/kievskaya_rus/ekonomika_kievskoy_rusi/} (дата обращения: 05.07.2023).
 \end{bclogo}
 
-Для экономики Древнерусского государства периода 9-12 веков характерен \textbf{ранний феодализм}.
-Зарождалась сама основа взаимоотношений между государством, сельским хозяйством и феодалами. \textbf{Ядром русской экономики в то время считалось именно сельское хозяйство, которое занимало главенствующее положение}.
+\subsubsection{Причины зарождения экономики}
 
-Данный период характеризуется \textbf{развитостью товарного хозяйства}, поскольку производилось почти все необходимое. \textbf{Ремесленное дело} развивалось быстрыми темпами, а \textbf{центрами становились города}, между тем и в селах развивались отдельные отрасли. Важнейшую роль играла \textbf{черная металлургия}, поскольку в Древней Руси имелись богатые болотные руды. Всевозможными способами обрабатывалось железо, из него изготавливались различные изделия для хозяйственных нужд, военного дела и так далее.
+Возникновение экономических взаимоотношений обусловлено \textbf{переходом от патриархального и родового строя к феодальному}.
+
+Переход \textbf{сопровождался появлением новых и усложнением ранее существовавших экономических инструментов}. 
+
+Развивается \textbf{институт земельной собственности}, начинаются \textbf{процессы закрепощения свободных членов общины}, развивается \textbf{внешняя и внутренняя торговля}, происходит \textbf{отделение ремесел от земледелия}. Создаются \textbf{финансовая и налоговая системы}, позволяющие собирать и перераспределять денежные и имущественные средства.
+
+\subsubsection{Структура экономики Киевской Руси}
+
+Экономика Киевской Руси была представлена тремя основными секторами:
+
+\begin{multienumerate}
+    \mitemxxx{\textbf{Сельское хозяйство}}{\textbf{Торговля}}{\textbf{Ремёсла}}
+\end{multienumerate}
+
+\paragraph{Сельское хозяйство}
+
+Сельское хозяйство – основной сектор экономики страны. Роль сельского хозяйства обусловлена природными условиями. Огромные территории пахотных земель, леса, большое количество водных артерий определили \textbf{первичное занятие восточных славян – занятие земледелием и собирательством}. Обеспечивает население страны продуктами питания. Улучшение средств и способов труда дали возможность перераспределять излишки продукции и послужили развитием другого сектора экономики – торговли.
+
+
+Сельское хозяйство состояло из трех отраслей: 
+
+\begin{multienumerate}
+    \mitemxxx{\textbf{Растениеводство}}{\textbf{Собирательство и промыслы}}{\textbf{Животноводство}}
+\end{multienumerate}
 
 \hfill
 
-Торговля в Древней Руси играла огромное значение, особенно внешняя. \textbf{Внешняя торговля была довольно сильно развита, являлась важной составляющей экономики древнерусских княжеств}. Из Руси \textbf{вывозились на продажу пушнина, воск, мёд, смола, лён и льняные ткани, серебряные вещи, пряслица из розового шифера, оружие, замки, резная кость и прочее}. А предметами ввоза были предметы роскоши, фрукты, пряности, краски и прочее.
+Основу растениеводства того времени составляло \textbf{пашенное земледелие}. В хозяйстве применялись \textbf{двух и трёхпольные севообороты}. Обработка почвы производилась \textbf{сохой} (северная часть) и \textbf{плугом} (юг страны). Основными сельскохозяйственными животными, применявшимися для обработки земли были лошадь и вол.
 
 \hfill
 
-Формой налогов в Древней Руси выступала \textbf{дань}, которую выплачивали подвластные племена. Чаще всего \textbf{единицей налогообложения выступал «дым», то есть дом, или семейный очаг}. Размер налога традиционно был в \textbf{одну шкурку с дыма}. В некоторых случаях — например, с племени вятичей, — бралось по монете от рала (плуга). \textbf{Формой сбора дани было полюдье}, когда князь с дружиной с ноября по апрель объезжал подданных.
+В качестве сельскохозяйственных растений население Киевской Руси использовало следующие виды: \textbf{рожь, пшеницу, ячмень}, имели распространение \textbf{просо, горох, чечевица}.
 
-В \textbf{946 году} после подавления восстания древлян княгиня Ольга провела налоговую реформу, \textbf{упорядочив сбор дани}. Она \textbf{отменила полюдье и установила «уроки», то есть размеры дани}, и создала «погосты» — крепости на пути полюдья, в которых жили княжеские управляющие и куда свозилась дань. \textbf{Такая форма сбора дани и сама дань назывались «повоз»}. При уплате налога подданные получали глиняные печати с княжеским знаком, что освобождало их от повторного сбора. Реформа \textbf{содействовала централизации великокняжеской власти и ослаблению власти племенных князей}.
+\hfill
+
+В качестве домашних животных в Киевской Руси разводили в первую очередь \textbf{лошадей и волов}, так как они были необходимы для обработки земли, а также \textbf{свиней, домашних пернатых и коз}.
+
+\hfill
+
+Собирательство или промыслы были представлены: охотой на лесных зверей, бортничеством. С помощью \textbf{охоты} люди обеспечивали себя мясом и мехом, наличие множества рек и речушек давали основу для развития \textbf{рыболовства}, ну а наличие огромных лесных массивов в центральной и северной части страны давало возможность сбора дикого меда (\textbf{бортничества}). \textbf{Пушнина и мед являлись основными экспортными товарами из России того времени}.
+
+\paragraph{Торговля}
+
+Торговля в Древней Руси играла огромное значение, особенно внешняя. \textbf{Внешняя торговля} была довольно сильно развита, являлась \textbf{важной составляющей экономики древнерусских княжеств}. Днепровский путь связывал Русь с Византией. Русские купцы ездили из Киева в Моравию, Чехию, Польшу, Южную Германию; из Новгорода и Полоцка — по Балтийскому морю в Скандинавию, Польское Поморье и далее на запад. Из Руси вывозились на продажу \textbf{пушнина, воск, мёд, смола, лён и льняные ткани, серебряные вещи, пряслица из розового шифера, оружие, замки, резная кость} и пр. А предметами ввоза были \textbf{предметы роскоши, фрукты, пряности, краски} и пр.
+
+Важнейшими \textbf{торговыми путями} Киевской Руси были: 
+
+\begin{enumerate}
+    \item Путь \textbf{«из варяг в греки»}, из Балтийского моря, через Восточную Европу, проходивший в Византию.
+    \item \textbf{Волжский торговый путь}, соединявший через город Ладогу Скандинавию с Арабским Халифатом.
+    \item \textbf{Сухопутный путь}, начинавшийся в Праге и через Киев выходивший на Волгу и далее в Азию.
+\end{enumerate}
+
+\paragraph{Ремёсла}
+
+С развитием феодального строя часть общинных ремесленников переходила в зависимость от феодалов, некоторые \textbf{покидали сельскую местность и уходили в города и крепости, где создавались ремесленные посады}. В них к XII веку насчитывалось свыше \textbf{60 ремесленных специальностей}. Часть ремёсел основывалась на металлургическом производстве, находившимся на высоком уровне развития.
+
+Древнерусские ремесленники производили \textbf{более 150 видов железных и стальных изделий}. Эта продукция играла \textbf{важную роль в развитии товарных связей городов с сельской местностью}. Древнерусские ювелиры владели искусством чеканки цветных металлов. В ремесленных мастерских изготовлялись \textbf{орудия труда}, \textbf{оружие}, \textbf{предметы быта}, \textbf{украшения}.
+
+\hfill
+
+История развития ремесла в Киевской Руси состоит из \textbf{двух этапов}:
+
+\begin{enumerate}
+    \item Первый этап. Охватывает временной интервал \textbf{от X века до первой трети XII века}. Характеризуется высокой техникой производства. Количество изделий было \textbf{ограниченным}, сами они были достаточно \textbf{дорогими}. В этот период была распространена \textbf{работа на заказ}, так как \textbf{рынок свободного сбыта был ещё ограничен}.
+    \item На втором этапе развития, который начался \textbf{в конце первой трети XII века}, произошло \textbf{резкое расширение ассортимента продукции} и \textbf{значительная рационализация производства} в виде \textbf{упрощения технологических операций}. В это время проявляется и \textbf{серийность} производства. Создаются \textbf{стандарты} изделий.
+\end{enumerate}
 
 \pagebreak
 \section{Вопрос №3. Политический и сословный строй Киевского государства}
