Add link to source of fourth question answer

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -253,6 +253,10 @@
 \pagebreak
 \section{Вопрос №4. «Русская Правда» — основной свод законов древнерусского государства}
 
+\begin{bclogo}[logo=\bcinfo, couleurBarre=orange, noborder=true, couleur=white]{Информация о материале}
+    Русская Правда // Википедия. [2023]. Дата обновления: 16.06.2023. URL: \url{https://ru.wikipedia.org/?curid=91965&oldid=131090880} (дата обращения: 16.06.2023).
+\end{bclogo}
+
 Русская Правда — \textbf{сборник правовых норм} Киевской Руси, датированный различными годами, начиная с 1016 года, \textbf{древнейший русский правовой кодекс}. Является одним из основных письменных источников русского права. Происхождение наиболее ранней части Русской Правды связано с деятельностью князя \textbf{Ярослава Мудрого}. Написана на древнерусском языке. Русская Правда стала основой русского законодательства и сохраняла своё значение до XV—XVI веков.
 
 \subsection{Право по Русской Правде}
