[24-07-2023] Upload TeX sources

--- a/sources/main.tex
+++ b/sources/main.tex
@@ -438,29 +438,29 @@
 \pagebreak
 \section{Вопрос №8. Москва — центр объединения русских земель}
 
-Возвышение Москвы — политический процесс, который проходил в \textbf{14-15 веках}. Этот процесс интересен тем, что \textbf{в результате борьбы между удельными княжествами победу одержала Москва} — город, который буквально за 100 лет до этого был провинциальным, а в момент возвышения не отличался ни богатством, ни условиями. Но благодаря симбиозу Москвы, Орды и церкви этот процесс стал возможным.
+\textbf{Возвышение Москвы} — политический процесс, который проходил в \textbf{14-15 веках}. Этот процесс интересен тем, что \textbf{в результате борьбы между удельными княжествами победу одержала Москва} — город, который буквально за 100 лет до этого был провинциальным, а в момент возвышения \textbf{не отличался ни богатством, ни условиями}. Но благодаря \textbf{симбиозу Москвы, Орды и церкви} этот процесс стал возможным.
 
 \subsection{Этапы объединения русских земель вокруг Москвы}
 
 Весь процесс возвышение Московского княжества и объединения русских земель можно свести к 3-м основным этапам:
 
 \begin{enumerate}
-    \item Конец 13 века — 80-е годы 14 века
-    \item 90-е годы 14 века — 1462 год
+    \item Конец XIII века — 80-е годы XIV века
+    \item 90-е годы XIV века — 1462 год
     \item 1462 — 1533 годы
 \end{enumerate}
 
-\subsubsection{Первый этап — до 80-х годов 14 века}
+\subsubsection{Первый этап (конец XIII века — 80-е годы XIV века)}
 
 Этот этап \textbf{характеризуется борьбой между Москвой, Тверью и частично Литвой}. Главный процесс, который происходил в это время — борьба отдельных княжеств северо-восточной Руси за главенствующее положение. В результате \textbf{Москве удалось закрепить ярлык на Великое княжение за собой}. Важный момент — московский князь получил ярлык на Великое княжение, но назывался он князем владимирским.
 
-\subsubsection{Второй этап (конец 14 века – 1462)}
+\subsubsection{Второй этап (90-е годы XIV века — 1462 год)}
 
-На втором этапе \textbf{борьба продолжалась между Москвой, Тверью и Литвой}. Именно на этом этапе у Литовского княжества появилась возможность захвата не только Москвы, но и остальных удельных княжеств Руси. Это стало возможным из-за \textbf{ослабления позиций Орды}, которая в 1395 году потерпела крупное поражение от Тамерлана. Однако в \textbf{1399 году она потерпела поражение от Орды, что создало хорошие условия для Москвы}. Тверь на этом этапе начала отходить на второстепенный план, и к началу третьего этапа возвышения Москвы Тверь утратила свой статус, подчинившись некогда более скромному соседу.
+На втором этапе \textbf{борьба продолжалась между Москвой, Тверью и Литвой}. Именно на этом этапе у Литовского княжества появилась возможность захвата не только Москвы, но и остальных удельных княжеств Руси. Это стало возможным из-за \textbf{ослабления позиций Орды}, которая в 1395 году потерпела крупное поражение от Тамерлана. Однако в \textbf{1399 году Великое княжество Литовское потерпело поражение от Орды, что создало хорошие условия для Москвы}. Тверь на этом этапе начала отходить на второстепенный план, и к началу третьего этапа возвышения Москвы Тверь утратила свой статус, подчинившись некогда более скромному соседу.
 
-\subsubsection{Третий этап (1462–1533)}
+\subsubsection{Третий этап (1462 — 1533 годы)}
 
-На третьем этапе возвышения Москвы основная борьба шла между Москвой и Великим княжеством Литовским. Остальные удельные княжества Руси уже практически полностью признали власть Москвы, и оставался только один альтернативный путь развития — Литовское княжество. В конечном итоге \textbf{победу Москвы предопределили политические системы двух центров}. \textbf{Москва пошла по пути централизации власти, когда основное управление строилась вокруг князя}. \textbf{В великом княжестве литовском фактически была олигархия}. В результате это \textbf{привело к нагноению системы управления и дальнейшего позитивного политического развития у данного княжества не было}.
+На третьем этапе возвышения Москвы основная борьба шла между \textbf{Москвой} и \textbf{Великим княжеством Литовским}. Остальные удельные княжества Руси уже практически полностью признали власть Москвы, и оставался только один альтернативный путь развития — Литовское княжество. В конечном итоге \textbf{победу Москвы предопределили политические системы двух центров}. \textbf{Москва пошла по пути централизации власти, когда основное управление строилось вокруг князя}. \textbf{В великом княжестве Литовском фактически была олигархия}. В результате это \textbf{привело к нагноению системы управления и дальнейшего позитивного политического развития у данного княжества не было}.
 
 \pagebreak
 \section{Вопрос №9. Русь между Ордой и Литвой в 14–15 веках}
